# eqnn_thesis

./: .gitignore  README.md  pyproject.toml  sacct_19558980.txt
eqnn/: __init__.py  __main__.py  cli.py  types.py
eqnn/backends/: __init__.py  base.py  numpy_pure.py  torch_ops.py  torch_pure.py
eqnn/datasets/: __init__.py  cache.py  heisenberg.py  io.py
eqnn/experiments/: __init__.py  analysis.py  backend_benchmark.py  calibration.py  reproduction.py  runner.py
eqnn/groups/: __init__.py  base.py  su2.py
eqnn/layers/: __init__.py  base.py  baseline.py  convolution.py  hea.py  pooling.py
eqnn/models/: __init__.py  base.py  baseline.py  hea_qcnn.py  qcnn.py
eqnn/physics/: __init__.py  heisenberg.py  observables.py  quantum.py  spin.py  topology.py
eqnn/training/: __init__.py  loop.py
logs/: paper_reproduction_status.txt
scripts/: analyze_partial_reproduction.py  find_missing_torch_calibration_rows.py  setup_sherlock_env.sh  sherlock_benchmark_backends.sbatch  sherlock_calibration_sweep.sbatch  sherlock_compare_eqnn_vs_hea_50ep.sbatch  sherlock_compare_eqnn_vs_hea_50ep_torch.sbatch  sherlock_paper_reproduction.sbatch  sherlock_paper_reproduction_by_trainsize.sbatch  sherlock_rerun_missing_torch_rows.sbatch  submit_paper_reproduction.sh
tests/: test_baseline.py  test_calibration.py  test_convolution.py  test_dataset.py  test_experiments.py  test_gradients.py  test_hea.py  test_heisenberg.py  test_observables.py  test_pooling.py  test_qcnn.py  test_reproduction.py  test_runner.py  test_topology.py  test_torch_backend.py  test_training.py
(+4434 files in other folders)
